--- a/snippets/product-information.liquid
+++ b/snippets/product-information.liquid
@@ -33,7 +33,7 @@
     {% endif %}
     {% if product.metafields.custom.shipping_returns != blank %}
     <div class="tab-pane fade" id="stab2" role="tabpanel">
-      {{product.metafields.custom.shipping_returns}}
+      {{product.metafields.custom.shipping_returns | metafield_tag}}
     </div>
     {% endif %}
     {% if product.metafields.info.tab3 != blank %}
